package S191220142.task2;

import S191220142.task2.Line.Position;

public interface Linable {

    public void setPosition(Position position);

    public Position getPosition();

    public int[] getColor();

}
